Non-functional front-end for Usuários and Associados

--- a/frontend/src/main/frontend/.tmp/serve/index.html
+++ b/frontend/src/main/frontend/.tmp/serve/index.html
@@ -37,7 +37,7 @@
         <ms-splash-screen id="splash-screen">
             <div class="center">
               <div class="logo">
-                <img src="https://files.slack.com/files-pri/T50VA3W12-F56G1VDFF/ebmlogo.png">
+                <img src="assets/logos/ebm_290.png">
               </div>
                 <!-- <div class="logo">
                     <span>E</span>
@@ -113,6 +113,10 @@
         <script src="app/main/usuario/usuario.controller.js"></script>
         <script src="app/main/sample/sample.module.js"></script>
         <script src="app/main/sample/sample.controller.js"></script>
+        <script src="app/main/relatorio/relatorio.module.js"></script>
+        <script src="app/main/relatorio/relatorio.controller.js"></script>
+        <script src="app/main/pagamento/pagamento.module.js"></script>
+        <script src="app/main/pagamento/pagamento.controller.js"></script>
         <script src="app/main/associado/associado.module.js"></script>
         <script src="app/main/associado/associado.controller.js"></script>
         <script src="app/core/theming/fuse-theming.service.js"></script>
@@ -124,12 +128,12 @@
         <script src="app/core/services/ms-utils.service.js"></script>
         <script src="app/core/services/ms-api.provider.js"></script>
         <script src="app/core/services/api-resolver.service.js"></script>
+        <script src="app/core/directives/highlight.directive.js"></script>
         <script src="app/core/filters/tag.filter.js"></script>
         <script src="app/core/filters/filterByPropIds.filter.js"></script>
         <script src="app/core/filters/filterByIds.filter.js"></script>
         <script src="app/core/filters/basic.filter.js"></script>
         <script src="app/core/filters/altDate.filter.js"></script>
-        <script src="app/core/directives/highlight.directive.js"></script>
         <script src="app/core/config/fuse-config.provider.js"></script>
         <script src="app/toolbar/toolbar.module.js"></script>
         <script src="app/toolbar/toolbar.controller.js"></script>
