--- a/frontend/src/main/frontend/src/index.html
+++ b/frontend/src/main/frontend/src/index.html
@@ -37,7 +37,7 @@
         <ms-splash-screen id="splash-screen">
             <div class="center">
               <div class="logo">
-                <img src="https://files.slack.com/files-pri/T50VA3W12-F56G1VDFF/ebmlogo.png">
+                <img src="assets/logos/ebm_290.png">
               </div>
                 <!-- <div class="logo">
                     <span>E</span>
