--- a/frontend/src/main/frontend/src/index.html
+++ b/frontend/src/main/frontend/src/index.html
@@ -64,7 +64,7 @@
 
         <div id="main" class="animate-slide-up" ui-view="main" layout="column"></div>
 
-        <ms-theme-options></ms-theme-options>
+        <!-- <ms-theme-options></ms-theme-options> -->
 
         <!-- build:js(src) scripts/vendor.js -->
         <!-- bower:js -->
