--- a/frontend/src/main/frontend/src/index.html
+++ b/frontend/src/main/frontend/src/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <title>EBM - Educandário Bezerra de Menezes</title>
 
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
